--- a/app/package.json
+++ b/app/package.json
@@ -7,25 +7,35 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@baloise/vue-axios": "^1.3.2",
+    "@baloise/vue-keycloak": "^1.5.0",
+    "@popperjs/core": "^2.11.5",
     "ag-grid-community": "^27.3.0",
     "ag-grid-vue3": "^27.3.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "bootstrap-vue-3": "^0.1.13",
     "core-js": "^3.6.5",
+    "jwt-decode": "^3.1.2",
+    "keycloak-js": "^18.0.0",
+    "process-env": "^2.0.2",
     "register-service-worker": "^1.7.1",
     "vue": "^3.0.0",
+    "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.0-0",
+    "vuejs-logger": "^1.5.5",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.15",
     "@vue/cli-plugin-pwa": "~4.5.15",
     "@vue/cli-plugin-router": "~4.5.15",
+    "@vue/cli-plugin-typescript": "~4.5.15",
     "@vue/cli-plugin-vuex": "~4.5.15",
     "@vue/cli-service": "~4.5.15",
     "@vue/compiler-sfc": "^3.0.0",
     "sass": "^1.26.5",
-    "sass-loader": "^8.0.2"
+    "sass-loader": "^8.0.2",
+    "typescript": "~4.1.5"
   }
 }
