--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,7 @@ services:
     hostname: docker-api
     volumes:
       - ./docker-api:/api
+      - /var/run/docker.sock:/var/run/docker.sock
     networks:
       - revelations-net
 
