--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
     container_name: revelations-middleware
     hostname: api
     volumes:
-      - ./middleware:/middleware
+      - ./middleware:/api
       - ./data/files:/files
     networks:
       - revelations-net
@@ -31,6 +31,7 @@ services:
     hostname: docker-api
     volumes:
       - ./docker-api:/api
+      - ./data/files:/files
       - /var/run/docker.sock:/var/run/docker.sock
     networks:
       - revelations-net
