--- a/docker-api/Dockerfile
+++ b/docker-api/Dockerfile
@@ -3,11 +3,9 @@ FROM docker:20.10.17-dind
 WORKDIR /api
 ENV GOPATH /go
 
-RUN apk add go
-
 COPY . .
 
-RUN go get .
+RUN apk add go && go get .
 
 EXPOSE 8080
 CMD ["go", "run", "."]
