--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,8 @@ services:
     hostname: api
     ports:
       - "5000:5000"
+    environment:
+      - MONGO_URI=dbuser:dbpass@mongo:27017
     volumes:
       - ./middleware:/api
       - ./data/files:/files
@@ -34,6 +36,49 @@ services:
       - ./docker-api:/api
       - ./data/files:/files
       - /var/run/docker.sock:/var/run/docker.sock
+    networks:
+      - revelations-net
+
+  dataset-api:
+    build: dataset-api
+    container_name: revelations-dataset-api
+    hostname: dataset-api
+    environment:
+      FLASK_APP: api
+      FLASK_HOST: 0.0.0.0
+      FLASK_ENV: development
+    volumes:
+      - ./dataset-api:/api
+      - ./data/files/datasets:/files
+    networks:
+      - revelations-net
+
+  mongoexpress:
+    image: mongo-express:0.54.0
+    container_name: revelations-mongo-express
+    ports:
+      - "8081:8081"
+    environment:
+      ME_CONFIG_MONGODB_OPTIONS_EDITORTHEME: "dracula"
+      ME_CONFIG_MONDODB_URL: mongodb://dbuser:dbpass@mongo:27017
+      ME_CONFIG_ENABLE_ADMIN: 'true'
+      ME_CONFIG_MONGODB_ADMINUSERNAME: dbuser
+      ME_CONFIG_MONGODB_ADMINPASSWORD: dbpass
+    depends_on:
+      - mongo
+    networks:
+      - revelations-net
+
+  mongo:
+    build: mongo
+    container_name: revelations-mongo
+    hostname: mongo
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: dbuser
+      MONGO_INITDB_ROOT_PASSWORD: dbpass
+      MONGO_INITDB_DATABASE: revelations
+    volumes:
+      - ./data/mongo:/data/db
     networks:
       - revelations-net
 
