--- a/middleware/package.json
+++ b/middleware/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "serve": "nodemon app.ts",
     "debug": "export DEBUG=* && npm run serve",
-    "test": "mocha -r ts-node/register 'test/**/*.test.ts' --unhandled-rejections=strict",
-    "test-debug": "export DEBUG=* && npm run test"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -21,21 +20,23 @@
     "express-fileupload": "^1.4.0",
     "express-winston": "^4.2.0",
     "mongoose": "^6.4.0",
+    "shortid": "^2.2.16",
     "winston": "^3.7.2"
   },
   "devDependencies": {
-    "@types/chai": "^4.3.1",
+    "@babel/preset-typescript": "^7.18.6",
     "@types/cors": "^2.8.12",
     "@types/debug": "^4.1.7",
     "@types/express": "^4.17.13",
     "@types/express-fileupload": "^1.2.2",
-    "@types/mocha": "^9.1.1",
+    "@types/jest": "^28.1.4",
+    "@types/shortid": "^0.0.29",
     "@types/supertest": "^2.0.12",
-    "chai": "^4.3.6",
-    "mocha": "^10.0.0",
+    "jest": "^28.1.2",
     "nodemon": "^2.0.16",
     "source-map-support": "^0.5.21",
     "supertest": "^6.2.3",
+    "ts-jest": "^28.0.5",
     "ts-node": "^10.8.1",
     "tslint": "^6.1.3",
     "typescript": "^4.7.4"
