--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
+    "@uiw/react-textarea-code-editor": "^2.0.3",
     "ag-grid-community": "^28.0.2",
     "ag-grid-react": "^28.0.0",
     "axios": "^0.27.2",
