--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,10 +68,8 @@ services:
     build: dataset-api
     container_name: revelations-dataset-api
     hostname: dataset-api
-    environment:
-      FLASK_APP: api
-      FLASK_HOST: 0.0.0.0
-      FLASK_ENV: development
+    env_file:
+        - env/flask.env
     depends_on:
       - fluentd
     volumes:
@@ -90,12 +88,8 @@ services:
     container_name: revelations-mongo-express
     ports:
       - "8081:8081"
-    environment:
-      ME_CONFIG_MONGODB_OPTIONS_EDITORTHEME: "dracula"
-      ME_CONFIG_MONDODB_URL: mongodb://dbuser:dbpass@mongo:27017
-      ME_CONFIG_ENABLE_ADMIN: 'true'
-      ME_CONFIG_MONGODB_ADMINUSERNAME: dbuser
-      ME_CONFIG_MONGODB_ADMINPASSWORD: dbpass
+    env_file:
+        - env/mongo-express.env
     depends_on:
       - mongo
     networks:
@@ -105,10 +99,8 @@ services:
     build: mongo
     container_name: revelations-mongo
     hostname: mongo
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: dbuser
-      MONGO_INITDB_ROOT_PASSWORD: dbpass
-      MONGO_INITDB_DATABASE: revelations
+    env_file:
+        - env/mongo.env
     volumes:
       - ./data/mongo:/data/db
     networks:
@@ -122,6 +114,8 @@ services:
       - ./data/oauth:/var/lib/postgresql/data
     env_file:
       - .env.oauth
+      - env/database.env
+
     networks:
       - revelations-net
 
@@ -130,6 +124,7 @@ services:
     container_name: oauth-server
     hostname: oauth
     env_file:
+      - env/database.env
       - .env.oauth
     ports:
       - "8080:8080"
